# msgcc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  biicode.conf
include/: ConstrantInterpret.h  ConstructInterpret.h  ErrorCodeInterpret.h  FieldChecker.h  FieldCtor.h  FieldOpCommon.h  InterpretCommon.h  MsgWrapper.h  WrapperMsgDef.h
include/base/: ConsoleState.h  Event.h  EventId.h  NullPtr.h  static_assert.h
include/msgcc/: ConstrantInterpret.h  ConstructInterpret.h  ErrorCodeInterpret.h  FieldChecker.h  FieldCtor.h  FieldOpCommon.h  InterpretCommon.h  InterpretUndef.h  Msgcc.h  WrapperMsgDef.h  WrapperMsgUndef.h
include/msgcc/base/: BaseTypes.h  ConsoleState.h  NullPtr.h  static_assert.h
include/msgcc/details/: FieldChecker.h  FieldCtor.h  FieldOpCommon.h  InterpretCommon.h
src/: CMakeLists.txt
src/base/: ConsoleState.cpp  Event.cpp  log.cpp
test/: CMakeLists.txt  MsgDefs.h  MsgccImpls.h  Msgs.h  SpecifiedOp.h  Testcase.cpp  WrapperMsgs.h  WrapperMsgsMeta.h
